<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".ui.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="@dimen/_18ssp"
                    android:text="@string/already_nhave_an_naccount" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_register_hero"
                    android:contentDescription="@string/login_design" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:fontFamily="@font/poppins"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:autofillHints="emailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:fontFamily="@font/poppins"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:autofillHints="password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:id="@+id/tvForgotPassword"
                android:text="@string/forgot_password"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AppCompat.Light"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone"
                android:id="@+id/progressbar"
                />

            <Button
                android:id="@+id/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/login"
                android:layout_height="wrap_content"
                android:layout_width="@dimen/_120sdp"
                android:textColor="@color/white"
                app:initialCornerAngle="27dp"
                android:backgroundTint="@color/themeColor"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <TextView
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/new_user_register_now"
                android:textAlignment="center"
                android:id="@+id/tvNewUserRegisterNow"
                android:textColor="@color/themeColor"
                android:textSize="@dimen/_11ssp"
                android:foreground="?attr/selectableItemBackground"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/use_other_methods"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="false"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/btnGoogleLogin"
                    android:src="@drawable/ic_google_plus"
                    android:contentDescription="@string/google_login" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/plusButton"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/plus"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_add_img" />

</RelativeLayout>